Post upgrade actions.
- Make output destination paths relative to basedir during model processing.
- Replace `ImmutableMap` with `Map` in `YamlCodeGenMojo`.
- Remove unused dependencies: commons-io.
- Added Marc as a contributor.